--- a/css/style.css
+++ b/css/style.css
@@ -45,13 +45,7 @@
   } */
 
 
-  .profile1 {
 
-  display:block;
-  /* width:70%; */
-  margin: 0 auto;
-
-  }
 
   .main-nav {
 
@@ -64,12 +58,13 @@
   text-align:center;
   position:relative;
   display:inline-block;
+  padding:0;
   }
 
-  /* img.profile1 {
+  img.profile1 {
 
-    margin-left: 20px;
-  } */
+    width:100%;
+  }
 
 
   .nav li
@@ -407,7 +402,7 @@
 
   }
 
-  .profile1 {
+  img.profile1 {
 
    width:40%
  }
